[package]
name = "ccap"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Edit caption files."
documentation = "https://docs.rs/ccap"
repository = "https://github.com/jbteves/ccap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
lazy_static = "1.4.0"
regex = "1.5.4"
